Fix z-index and set position fixed on opacity layer

--- a/src/organisms/ShoppingCartAccordion/ShoppingCartAccordion.pcss
+++ b/src/organisms/ShoppingCartAccordion/ShoppingCartAccordion.pcss
@@ -1,7 +1,7 @@
 .shopping-cart__sticky {
   position: sticky;
   top: 0;
-  z-index: 110;
+  z-index: 10;
   max-height: 100vh;
   overflow-y: auto;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.22);
@@ -10,10 +10,10 @@
 .shopping-cart__opacity-layer {
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 9;
   background: rgba(0, 0, 0, 0.6);
 }
 
